Refactor authentication pages and update layout
Renamed 'signin.html' to 'login.html' and updated all references accordingly. Added a new 'signup.html' for user registration and 'admin/login.html' for admin authentication. Removed the categories section from the homepage and layout editor, and improved search functionality in 'category-products.html' to match category names. Updated navigation and documentation to reflect these changes.

--- a/cart.html
+++ b/cart.html
@@ -108,7 +108,8 @@
             <h2>Your cart is currently empty.</h2>
             <a href="categories.html" class="btn" style="margin-top: 2rem;">Go Shopping</a>
             <div style="margin-top: 2rem;">
-                <a href="signin.html" style="font-size: 0.8rem; color: #ccc;"><i class="fa-solid fa-lock"></i> Admin
+                <a href="admin/login.html" style="font-size: 0.8rem; color: #ccc;"><i class="fa-solid fa-lock"></i>
+                    Admin
                     Portal</a>
             </div>
         </div>
@@ -141,7 +142,8 @@
                         Shopping</a>
                 </div>
                 <div style="text-align: center; margin-top: 2rem; padding-top: 1rem; border-top: 1px dashed #ddd;">
-                    <a href="signin.html" style="font-size: 0.8rem; color: #999;"><i class="fa-solid fa-lock"></i> Admin
+                    <a href="admin/login.html" style="font-size: 0.8rem; color: #999;"><i class="fa-solid fa-lock"></i>
+                        Admin
                         Portal</a>
                 </div>
             </div>
