Add responsive mobile navigation to admin pages
Introduced a mobile header with hamburger menu and sidebar toggle for all admin HTML pages. Updated CSS for responsive layouts, improved table responsiveness, and enhanced modal and grid layouts for better usability on smaller screens.

--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -27,6 +27,25 @@
         .admin-main {
             margin-left: 250px;
             padding: 40px;
+            transition: var(--transition);
+        }
+
+        /* Mobile Adjustments */
+        .admin-header-mobile {
+            display: none;
+            background: var(--primary-color);
+            color: white;
+            padding: 15px 20px;
+            justify-content: space-between;
+            align-items: center;
+            position: sticky;
+            top: 0;
+            z-index: 1001;
+        }
+
+        .hamburger {
+            font-size: 1.5rem;
+            cursor: pointer;
         }
 
         .admin-logo {
@@ -109,12 +128,51 @@
             font-size: 1.2rem;
             margin-bottom: 0.5rem;
         }
+
+        @media (max-width: 992px) {
+            .admin-sidebar {
+                transform: translateX(-100%);
+                z-index: 1000;
+                transition: transform 0.3s ease;
+            }
+
+            .admin-sidebar.active {
+                transform: translateX(0);
+            }
+
+            .admin-main {
+                margin-left: 0;
+                padding: 20px;
+            }
+
+            .admin-header-mobile {
+                display: flex;
+            }
+
+            .stats-grid {
+                grid-template-columns: 1fr;
+            }
+
+            .quick-actions {
+                grid-template-columns: 1fr;
+            }
+
+            .sale-settings-grid {
+                grid-template-columns: 1fr !important;
+            }
+        }
     </style>
 </head>
 
 <body style="background: #f4f6f9;">
 
-    <aside class="admin-sidebar">
+    <div class="admin-header-mobile">
+        <div class="admin-logo" style="margin-bottom: 0; font-size: 1.2rem;">Admin <span class="accent">Panel</span>
+        </div>
+        <div class="hamburger" id="mobile-toggle"><i class="fa-solid fa-bars"></i></div>
+    </div>
+
+    <aside class="admin-sidebar" id="sidebar">
         <div class="admin-logo">Admin <span class="accent">Panel</span></div>
         <ul class="admin-nav">
             <li><a href="dashboard.html" class="active"><i class="fa-solid fa-gauge"></i> Dashboard</a></li>
@@ -166,7 +224,7 @@
 
         <h2 style="margin-bottom: 1.5rem;">Sale Settings</h2>
         <div style="background: white; padding: 30px; border-radius: 10px; box-shadow: 0 5px 20px rgba(0,0,0,0.05);">
-            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 2rem;">
+            <div class="sale-settings-grid" style="display: grid; grid-template-columns: 1fr 1fr; gap: 2rem;">
                 <div class="form-group">
                     <label>Sale Message</label>
                     <input type="text" id="sale-text" placeholder="e.g. FLASH SALE | 20% OFF">
@@ -191,6 +249,18 @@
         const session = JSON.parse(localStorage.getItem('mv_auth_session'));
         if (!session || session.role !== 'admin') {
             window.location.href = 'login.html';
+        }
+
+        // Mobile Toggle Logic
+        const toggle = document.getElementById('mobile-toggle');
+        const sidebar = document.getElementById('sidebar');
+        if (toggle) {
+            toggle.addEventListener('click', () => {
+                sidebar.classList.toggle('active');
+                const icon = toggle.querySelector('i');
+                icon.classList.toggle('fa-bars');
+                icon.classList.toggle('fa-times');
+            });
         }
 
         // Logout
