--- a/admin/login.html
+++ b/admin/login.html
@@ -30,6 +30,17 @@
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
         }
 
+        @media (max-width: 480px) {
+            .admin-card {
+                padding: 30px 20px;
+                max-width: 90%;
+            }
+
+            .admin-card h2 {
+                font-size: 1.5rem;
+            }
+        }
+
         .admin-card h2 {
             margin-bottom: 2rem;
             text-align: center;
