--- a/admin/orders.html
+++ b/admin/orders.html
@@ -27,6 +27,31 @@
         .admin-main {
             margin-left: 250px;
             padding: 40px;
+            transition: var(--transition);
+        }
+
+        /* Mobile Adjustments */
+        .admin-header-mobile {
+            display: none;
+            background: var(--primary-color);
+            color: white;
+            padding: 15px 20px;
+            justify-content: space-between;
+            align-items: center;
+            position: sticky;
+            top: 0;
+            z-index: 1001;
+        }
+
+        .hamburger {
+            font-size: 1.5rem;
+            cursor: pointer;
+        }
+
+        .table-responsive {
+            width: 100%;
+            overflow-x: auto;
+            -webkit-overflow-scrolling: touch;
         }
 
         .admin-logo {
@@ -108,19 +133,59 @@
 
         .order-modal-content {
             background: white;
-            padding: 40px;
+            padding: 30px;
             border-radius: 15px;
             width: 700px;
             max-width: 95%;
             max-height: 90vh;
             overflow-y: auto;
         }
+
+        @media (max-width: 992px) {
+            .admin-sidebar {
+                transform: translateX(-100%);
+                z-index: 1000;
+                transition: transform 0.3s ease;
+            }
+
+            .admin-sidebar.active {
+                transform: translateX(0);
+            }
+
+            .admin-main {
+                margin-left: 0;
+                padding: 20px;
+            }
+
+            .admin-header-mobile {
+                display: flex;
+            }
+
+            .admin-main h1 {
+                font-size: 1.5rem;
+            }
+
+            .order-modal-content {
+                padding: 20px;
+            }
+
+            .order-details-grid {
+                grid-template-columns: 1fr !important;
+                gap: 1rem !important;
+            }
+        }
     </style>
 </head>
 
 <body style="background: #f4f6f9;">
 
-    <aside class="admin-sidebar">
+    <div class="admin-header-mobile">
+        <div class="admin-logo" style="margin-bottom: 0; font-size: 1.2rem;">Admin <span class="accent">Panel</span>
+        </div>
+        <div class="hamburger" id="mobile-toggle"><i class="fa-solid fa-bars"></i></div>
+    </div>
+
+    <aside class="admin-sidebar" id="sidebar">
         <div class="admin-logo">Admin <span class="accent">Panel</span></div>
         <ul class="admin-nav">
             <li><a href="dashboard.html"><i class="fa-solid fa-gauge"></i> Dashboard</a></li>
@@ -136,21 +201,23 @@
     <main class="admin-main">
         <h1 style="margin-bottom: 2rem;">Customer Orders</h1>
 
-        <table class="order-table">
-            <thead>
-                <tr>
-                    <th>Order ID</th>
-                    <th>Customer</th>
-                    <th>Date</th>
-                    <th>Total</th>
-                    <th>Status</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody id="order-list">
-                <!-- Populated by JS -->
-            </tbody>
-        </table>
+        <div class="table-responsive">
+            <table class="order-table">
+                <thead>
+                    <tr>
+                        <th>Order ID</th>
+                        <th>Customer</th>
+                        <th>Date</th>
+                        <th>Total</th>
+                        <th>Status</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody id="order-list">
+                    <!-- Populated by JS -->
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <!-- Order Detail Modal -->
@@ -170,6 +237,18 @@
         const session = JSON.parse(localStorage.getItem('mv_auth_session'));
         if (!session || session.role !== 'admin') {
             window.location.href = 'login.html';
+        }
+
+        // Mobile Toggle Logic
+        const toggle = document.getElementById('mobile-toggle');
+        const sidebar = document.getElementById('sidebar');
+        if (toggle) {
+            toggle.addEventListener('click', () => {
+                sidebar.classList.toggle('active');
+                const icon = toggle.querySelector('i');
+                icon.classList.toggle('fa-bars');
+                icon.classList.toggle('fa-times');
+            });
         }
 
         let orders = getData('orders') || [];
@@ -203,7 +282,7 @@
             const details = document.getElementById('order-details-body');
 
             details.innerHTML = `
-                <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 2rem; margin-bottom: 2rem; border-bottom: 1px solid #eee; padding-bottom: 1.5rem;">
+                <div class="order-details-grid" style="display: grid; grid-template-columns: 1fr 1fr; gap: 2rem; margin-bottom: 2rem; border-bottom: 1px solid #eee; padding-bottom: 1.5rem;">
                     <div>
                         <h4 style="color: var(--text-muted); text-transform: uppercase; font-size: 0.8rem; margin-bottom: 0.5rem;">Customer Details</h4>
                         <p><strong>${order.customer.name}</strong></p>
