--- a/admin/products.html
+++ b/admin/products.html
@@ -27,6 +27,31 @@
         .admin-main {
             margin-left: 250px;
             padding: 40px;
+            transition: var(--transition);
+        }
+
+        /* Mobile Adjustments */
+        .admin-header-mobile {
+            display: none;
+            background: var(--primary-color);
+            color: white;
+            padding: 15px 20px;
+            justify-content: space-between;
+            align-items: center;
+            position: sticky;
+            top: 0;
+            z-index: 1001;
+        }
+
+        .hamburger {
+            font-size: 1.5rem;
+            cursor: pointer;
+        }
+
+        .table-responsive {
+            width: 100%;
+            overflow-x: auto;
+            -webkit-overflow-scrolling: touch;
         }
 
         .admin-logo {
@@ -143,12 +168,43 @@
             height: 100%;
             object-fit: cover;
         }
+
+        @media (max-width: 992px) {
+            .admin-sidebar {
+                transform: translateX(-100%);
+                z-index: 1000;
+                transition: transform 0.3s ease;
+            }
+
+            .admin-sidebar.active {
+                transform: translateX(0);
+            }
+
+            .admin-main {
+                margin-left: 0;
+                padding: 20px;
+            }
+
+            .admin-header-mobile {
+                display: flex;
+            }
+
+            .admin-main h1 {
+                font-size: 1.5rem;
+            }
+        }
     </style>
 </head>
 
 <body style="background: #f4f6f9;">
 
-    <aside class="admin-sidebar">
+    <div class="admin-header-mobile">
+        <div class="admin-logo" style="margin-bottom: 0; font-size: 1.2rem;">Admin <span class="accent">Panel</span>
+        </div>
+        <div class="hamburger" id="mobile-toggle"><i class="fa-solid fa-bars"></i></div>
+    </div>
+
+    <aside class="admin-sidebar" id="sidebar">
         <div class="admin-logo">Admin <span class="accent">Panel</span></div>
         <ul class="admin-nav">
             <li><a href="dashboard.html"><i class="fa-solid fa-gauge"></i> Dashboard</a></li>
@@ -167,20 +223,22 @@
             <button class="btn" onclick="openModal()">Add New Product</button>
         </div>
 
-        <table class="product-table">
-            <thead>
-                <tr>
-                    <th>Image</th>
-                    <th>Name</th>
-                    <th>Category</th>
-                    <th>Price</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody id="product-list">
-                <!-- Populated by JS -->
-            </tbody>
-        </table>
+        <div class="table-responsive">
+            <table class="product-table">
+                <thead>
+                    <tr>
+                        <th>Image</th>
+                        <th>Name</th>
+                        <th>Category</th>
+                        <th>Price</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody id="product-list">
+                    <!-- Populated by JS -->
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <!-- Modal -->
@@ -225,6 +283,18 @@
         const session = JSON.parse(localStorage.getItem('mv_auth_session'));
         if (!session || session.role !== 'admin') {
             window.location.href = 'login.html';
+        }
+
+        // Mobile Toggle Logic
+        const toggle = document.getElementById('mobile-toggle');
+        const sidebar = document.getElementById('sidebar');
+        if (toggle) {
+            toggle.addEventListener('click', () => {
+                sidebar.classList.toggle('active');
+                const icon = toggle.querySelector('i');
+                icon.classList.toggle('fa-bars');
+                icon.classList.toggle('fa-times');
+            });
         }
 
         let products = getData('products');
